--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "image-optimization",
+  "name": "imgproxy-aws-cdk",
   "version": "0.1.0",
   "bin": {
     "image-optimization": "bin/image-optimization.js"
