--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.11",
+    "@biomejs/biome": "1.9.4",
+    "@types/jest": "^29.5.14",
     "@types/node": "20.11.2",
-    "@types/prettier": "2.7.3",
-    "aws-cdk": "2.121.1",
+    "aws-cdk": "2.178.1",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "~5.3.3"
+    "typescript": "~5.7.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.121.1",
-    "constructs": "^10.3.0",
+    "aws-cdk-lib": "2.178.1",
+    "constructs": "^10.4.2",
+    "dotenv": "^16.4.7",
     "source-map-support": "^0.5.21"
-  }
+  },
+  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
