--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "imgproxy-aws-cdk",
-  "version": "0.1.0",
-  "bin": {
-    "image-optimization": "bin/image-optimization.js"
-  },
-  "scripts": {
-    "prebuild": "npm install sharp --cpu=x64 --os=linux --libc=glibc --prefix functions/image-processing",
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "jest",
-    "cdk": "cdk"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@types/jest": "^29.5.14",
-    "@types/node": "20.11.2",
-    "aws-cdk": "2.178.1",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.7.3"
-  },
-  "dependencies": {
-    "aws-cdk-lib": "2.178.1",
-    "constructs": "^10.4.2",
-    "dotenv": "^16.4.7",
-    "source-map-support": "^0.5.21"
-  },
-  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
+	"name": "imgproxy-aws-cdk",
+	"version": "0.1.0",
+	"bin": {
+		"imgproxy": "./bin/imgproxy.js"
+	},
+	"scripts": {
+		"build": "tsc && swc ./functions/url-rewrite/index.ts -o ./functions/url-rewrite/index.min.js --config-file .swcrc",
+		"watch": "tsc -w",
+		"test": "jest",
+		"cdk": "cdk"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@swc/cli": "^0.6.0",
+		"@swc/core": "^1.10.18",
+		"@types/aws-cloudfront-function": "^1.0.4",
+		"@types/jest": "^29.5.14",
+		"@types/node": "22.13.4",
+		"aws-cdk": "2.178.1",
+		"jest": "^29.7.0",
+		"ts-jest": "^29.2.5",
+		"ts-node": "^10.9.2",
+		"typescript": "~5.7.3"
+	},
+	"dependencies": {
+		"aws-cdk-lib": "2.178.1",
+		"constructs": "^10.4.2",
+		"dotenv": "^16.4.7",
+		"source-map-support": "^0.5.21"
+	},
+	"packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
