--- a/package.json
+++ b/package.json
@@ -1,32 +1,39 @@
 {
 	"name": "imgproxy-aws-cdk",
 	"version": "0.1.0",
+	"type": "module",
 	"bin": {
 		"imgproxy": "./bin/imgproxy.js"
 	},
 	"scripts": {
-		"build": "tsc && swc ./functions/url-rewrite/index.ts -o ./functions/url-rewrite/index.min.js --config-file .swcrc",
+		"build": "rm -rf ./.build  && swc ./functions --out-dir ./.build --config-file .swcrc --copy-files",
 		"watch": "tsc -w",
 		"test": "jest",
-		"cdk": "cdk"
+		"cdk": "cdk",
+		"proc-opt": "rm -rf ./functions/url-rewrite/indexed-processing-options.js && tsx ./scripts/functions/url-rewrite/processing-options.ts"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@swc/cli": "^0.6.0",
-		"@swc/core": "^1.10.18",
+		"@swc/core": "^1.11.1",
 		"@types/aws-cloudfront-function": "^1.0.4",
 		"@types/jest": "^29.5.14",
-		"@types/node": "22.13.4",
-		"aws-cdk": "2.178.1",
+		"@types/node": "22.13.5",
+		"@types/prompts": "^2.4.9",
+		"aws-cdk": "2.1001.0",
+		"esbuild": "^0.25.0",
 		"jest": "^29.7.0",
-		"ts-jest": "^29.2.5",
+		"prompts": "^2.4.2",
+		"ts-jest": "^29.2.6",
 		"ts-node": "^10.9.2",
+		"tsx": "^4.19.3",
 		"typescript": "~5.7.3"
 	},
 	"dependencies": {
-		"aws-cdk-lib": "2.178.1",
+		"aws-cdk-lib": "2.181.0",
 		"constructs": "^10.4.2",
 		"dotenv": "^16.4.7",
+		"execa": "^9.5.2",
 		"source-map-support": "^0.5.21"
 	},
 	"packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
