--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "removeComments": true,
     "noEmit": true,
     "declaration": false,
-    "target": "ESNext",
+    "target": "ES2018",
     "module": "ES2022",
     "lib": [
       "ESNext"
