--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,8 @@
 		"formatter": {
 			"quoteStyle": "double",
 			"lineWidth": 100,
-			"indentWidth": 2
+			"indentWidth": 2,
+			"semicolons":"always",
 		}
 	}
 }
