--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,18 @@
 {
+    "editor.defaultFormatter": "dprint.dprint",
     "editor.formatOnSave": true,
     "[javascript]": {
-        "editor.defaultFormatter": "biomejs.biome",
-        "editor.formatOnSave": true,
         "editor.codeActionsOnSave": {
             "source.organizeImports.biome": "explicit"
         }
     },
     "[typescript]": {
-        "editor.defaultFormatter": "biomejs.biome",
-        "editor.formatOnSave": true,
         "editor.codeActionsOnSave": {
             "source.organizeImports.biome": "explicit"
-        }
+        },
+        "editor.defaultFormatter": "dprint.dprint"
     },
     "[json]": {
-        "editor.defaultFormatter": "biomejs.biome",
-        "editor.formatOnSave": true
+        "editor.defaultFormatter": "dprint.dprint"
     }
 }
