--- a/biome.json
+++ b/biome.json
@@ -10,7 +10,7 @@
 		"ignore": []
 	},
 	"formatter": {
-		"enabled": true,
+		"enabled": false,
 		"indentStyle": "tab"
 	},
 	"organizeImports": {
@@ -27,7 +27,7 @@
 			"quoteStyle": "double",
 			"lineWidth": 100,
 			"indentWidth": 2,
-			"semicolons":"always",
+			"semicolons": "always"
 		}
 	}
 }
