--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,4 +29,9 @@
   "exclude": [
     "functions/**/*"
   ],
+  "paths": {
+    "cloudfront": [
+      "./functions/mock/cloudfront.ts"
+    ]
+  }
 }
