--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
 	"name": "imgproxy-aws-cdk",
 	"version": "0.1.0",
 	"type": "module",
-	"source": "functions/url-rewrite/index.ts",
-	"main": ".dist/functions/url-rewrite/index.js",
-	"module": ".dist/functions/url-rewrite/index.module.js",
 	"bin": {
 		"imgproxy": "./bin/imgproxy.js"
 	},
@@ -18,6 +15,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@jest/globals": "^29.7.0",
 		"@swc/cli": "^0.6.0",
 		"@swc/core": "^1.11.1",
 		"@types/aws-cloudfront-function": "^1.0.4",
@@ -25,23 +23,22 @@
 		"@types/node": "22.13.5",
 		"@types/prompts": "^2.4.9",
 		"aws-cdk": "2.1001.0",
+		"cloudfront": "link:functions/url-rewrite/__mocks__/cloudfront",
+		"dotenv": "^16.4.7",
 		"esbuild": "^0.25.0",
+		"execa": "^9.5.2",
 		"jest": "^29.7.0",
 		"parcel": "^2.13.3",
 		"prompts": "^2.4.2",
 		"ts-jest": "^29.2.6",
 		"ts-node": "^10.9.2",
 		"tsx": "^4.19.3",
-		"typescript": "~5.7.3",
-		"cloudfront": "link:functions/mock/cloudfront"
+		"typescript": "~5.7.3"
 	},
 	"dependencies": {
 		"aws-cdk-lib": "2.181.0",
 		"constructs": "^10.4.2",
-		"dotenv": "^16.4.7",
-		"execa": "^9.5.2",
 		"source-map-support": "^0.5.21"
 	},
-
 	"packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
