--- a/functions/url-rewrite/__mocks__/cloudfront/package.json
+++ b/functions/url-rewrite/__mocks__/cloudfront/package.json
@@ -13,5 +13,8 @@
 			"name": "Bryan Reedy",
 			"githubUsername": "pilchard"
 		}
-	]
+	],
+	"devDependencies": {
+		"@types/node": "^22.13.8"
+	}
 }
