--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,14 +2,9 @@
     "editor.defaultFormatter": "dprint.dprint",
     "editor.formatOnSave": true,
     "[javascript]": {
-        "editor.codeActionsOnSave": {
-            "source.organizeImports.biome": "explicit"
-        }
+        "editor.defaultFormatter": "dprint.dprint"
     },
     "[typescript]": {
-        "editor.codeActionsOnSave": {
-            "source.organizeImports.biome": "explicit"
-        },
         "editor.defaultFormatter": "dprint.dprint"
     },
     "[json]": {
