--- a/functions/url-rewrite/__mocks__/cloudfront/tsconfig.json
+++ b/functions/url-rewrite/__mocks__/cloudfront/tsconfig.json
@@ -9,9 +9,11 @@
         "noImplicitThis": true,
         "strictNullChecks": true,
         "strictFunctionTypes": true,
-        "types": [],
+        "types": [
+            "node"
+        ],
         "noEmit": true,
         "forceConsistentCasingInFileNames": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
     },
 }
