--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,17 @@
 {
-    "editor.defaultFormatter": "dprint.dprint",
-    "editor.formatOnSave": true,
-    "[javascript]": {
-        "editor.defaultFormatter": "dprint.dprint"
-    },
-    "[typescript]": {
-        "editor.defaultFormatter": "dprint.dprint"
-    },
-    "[json]": {
-        "editor.defaultFormatter": "dprint.dprint"
-    }
+	"editor.defaultFormatter": "dprint.dprint",
+	"editor.formatOnSave": true,
+	"[javascript]": {
+		"editor.formatOnSave": true,
+		"editor.defaultFormatter": "dprint.dprint"
+	},
+	"[typescript]": {
+		"editor.defaultFormatter": "dprint.dprint"
+	},
+	"[json]": {
+		"editor.defaultFormatter": "dprint.dprint"
+	},
+	"[jsonc]": {
+		"editor.defaultFormatter": "dprint.dprint"
+	}
 }
