--- a/biome.json
+++ b/biome.json
@@ -7,27 +7,19 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": []
+		"ignore": [".dist/*.js"]
 	},
 	"formatter": {
 		"enabled": false,
 		"indentStyle": "tab"
 	},
 	"organizeImports": {
-		"enabled": true
+		"enabled": false
 	},
 	"linter": {
 		"enabled": true,
 		"rules": {
 			"recommended": true
-		}
-	},
-	"javascript": {
-		"formatter": {
-			"quoteStyle": "double",
-			"lineWidth": 100,
-			"indentWidth": 2,
-			"semicolons": "always"
 		}
 	}
 }
