local aws-cloudfront-function types

--- a/package.json
+++ b/package.json
@@ -37,19 +37,21 @@
 		"@biomejs/biome": "1.9.4",
 		"@parcel/config-default": "^2.13.3",
 		"@parcel/plugin": "^2.13.3",
-		"@types/aws-cloudfront-function": "^1.0.4",
+		"@pilchard/aws-cloudfront-function": "link:../aws-cloudfront-function",
+		"@types/aws-lambda": "^8.10.147",
 		"@types/node": "22.13.5",
 		"aws-cdk": "2.1001.0",
+		"cloudfront": "link:functions/url-rewrite/__mocks__/cloudfront",
 		"dotenv": "^16.4.7",
 		"parcel": "^2.13.3",
 		"ts-node": "^10.9.2",
 		"tsx": "^4.19.3",
 		"typescript": "5.8.2",
+		"vite": "^6.2.1",
 		"vitest": "^3.0.8"
 	},
 	"dependencies": {
-		"aws-cdk-lib": "2.181.0",
-		"cloudfront": "link:functions/url-rewrite/__mocks__/cloudfront",
+		"aws-cdk-lib": "2.182.0",
 		"constructs": "^10.4.2",
 		"source-map-support": "^0.5.21"
 	},
