--- a/functions/url-rewrite/__mocks__/cloudfront/tsconfig.json
+++ b/functions/url-rewrite/__mocks__/cloudfront/tsconfig.json
@@ -1,19 +1,16 @@
 {
-    "compilerOptions": {
-        "module": "ES2022",
-        "moduleResolution": "bundler",
-        "lib": [
-            "es2022"
-        ],
-        "noImplicitAny": true,
-        "noImplicitThis": true,
-        "strictNullChecks": true,
-        "strictFunctionTypes": true,
-        "types": [
-            "node"
-        ],
-        "noEmit": true,
-        "forceConsistentCasingInFileNames": true,
-        "esModuleInterop": true,
-    },
+	"compilerOptions": {
+		"module": "ES2022",
+		"moduleResolution": "bundler",
+		"lib": [
+			"es2022"
+		],
+		"noImplicitAny": true,
+		"noImplicitThis": true,
+		"strictNullChecks": true,
+		"strictFunctionTypes": true,
+		"noEmit": true,
+		"forceConsistentCasingInFileNames": true,
+		"esModuleInterop": true
+	}
 }
