--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
 		/* If transpiling with TypeScript: */
 		// "module": "NodeNext",
 		// "outDir": "dist",
-		// "sourceMap": true,
+		"sourceMap": false,
 
 		/* AND if you're building for a library: */
 		"declaration": true,
