--- a/.parcelrc
+++ b/.parcelrc
@@ -1,6 +1,9 @@
 {
   "extends": "@parcel/config-default",
   "optimizers": {
-    "*.js": ["...", "./scripts/parcel/optimizers/export-handler.js"]
+    "*.js": [
+      "./scripts/parcel/optimizers/handler-assigner.js", 
+      "...", 
+      "./scripts/parcel/optimizers/export-handler.js"]
   }
 }
