--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
 	"targets": {
 		"url-rewrite": {
 			"source": "functions/url-rewrite/index.ts",
-			"distDir": ".dist/url-rewrite",
+			"distDir": ".dist/functions/url-rewrite",
 			"context": "node",
 			"isLibrary": true,
 			"outputFormat": "esmodule",
 			"includeNodeModules": false,
 			"scopeHoist": true,
-			"sourceMap": true,
+			"sourceMap": false,
 			"optimize": true,
 			"engines": {
 				"node": ">= 20"
@@ -53,7 +53,8 @@
 	"dependencies": {
 		"aws-cdk-lib": "2.182.0",
 		"constructs": "^10.4.2",
-		"source-map-support": "^0.5.21"
+		"source-map-support": "^0.5.21",
+		"cloudfront": "link:functions/url-rewrite/__mocks__/cloudfront"
 	},
 	"packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
