clean up for build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
 		/* tsconfig/bases: https://github.com/tsconfig/bases/blob/031273b815ff7f672c7c9057fb7d19ef363054b1/bases/strictest.json */
 		"allowUnusedLabels": false,
 		"allowUnreachableCode": false,
-		"exactOptionalPropertyTypes": true,
+		// "exactOptionalPropertyTypes": true,
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitReturns": true,
 		// "noPropertyAccessFromIndexSignature": true,
