--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
 	"compilerOptions": {
-		/* Base Options: */
+		"module": "ES2022",
+		"noEmit": true,
+		"lib": [
+			"es2022"
+		],
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"target": "es2022",
@@ -11,43 +15,18 @@
 		"isolatedModules": true,
 		"verbatimModuleSyntax": true,
 		"allowImportingTsExtensions": true,
-
-		/* Strictness */
 		"strict": true,
-		// "noUncheckedIndexedAccess": true,
 		"noImplicitOverride": true,
-		/* tsconfig/bases: https://github.com/tsconfig/bases/blob/031273b815ff7f672c7c9057fb7d19ef363054b1/bases/strictest.json */
 		"allowUnusedLabels": false,
 		"allowUnreachableCode": false,
-		// "exactOptionalPropertyTypes": true,
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitReturns": true,
+		// "exactOptionalPropertyTypes": true,
 		// "noPropertyAccessFromIndexSignature": true,
+		// "noUncheckedIndexedAccess": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"forceConsistentCasingInFileNames": true,
-
-		/* If transpiling with TypeScript: */
-		// "module": "NodeNext",
-		// "outDir": "dist",
-		"sourceMap": false,
-
-		/* AND if you're building for a library: */
-		"declaration": true,
-
-		/* AND if you're building for a library in a monorepo: */
-		"composite": true,
-		"declarationMap": true,
-
-		/* If NOT transpiling with TypeScript: */
-		"module": "ES2022",
-		"noEmit": true,
-
-		/* If your code runs in the DOM: */
-		// "lib": ["es2022", "dom", "dom.iterable"],
-		/* If your code doesn't run in the DOM: */
-		"lib": [
-			"es2022"
-		]
+		"sourceMap": false
 	}
 }
