--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
 	"scripts": {
 		"watch": "tsc -w",
 		"test": "vitest",
-		"cdk:deploy": "pnpm run build && pnpm run cdk:update && cdk deploy && pnpm run cdk:post",
-		"cdk:destroy": "pnpm run cdk:update && cdk destroy --force",
+		"cdk:deploy": "pnpm run build && pnpm run cdk:update && cdk deploy && pnpm run deploy-post",
+		"cdk:destroy": "pnpm run cdk:update && cdk destroy --force && pnpm run destroy-post",
 		"cdk:update": "npm install -g aws-cdk",
-		"cdk:post": "tsx ./bin/imgproxy-post.ts",
+		"deploy-post": "tsx ./bin/imgproxy-post.ts deploy",
+		"destroy-post": "tsx ./bin/imgproxy-post.ts destroy",
 		"typecheck": "tsc --noEmit",
 		"build": "pnpm run typecheck && rm -rf ./.dist && pnpm run build:parcel",
 		"build:parcel": "parcel build"
