move S3 removal to .env; abandon NODE_ENV

--- a/.env.sample
+++ b/.env.sample
@@ -28,6 +28,8 @@ S3_EXISTING_OBJECT_ARNS=
 S3_ASSUME_ROLE_ARN=
 S3_MULTI_REGION=false
 S3_CLIENT_SIDE_DECRYPTION=false
+# `retain` | `destroy` | `update` 
+S3_REMOVAL_POLICY=retain
 
 # CLOUDFRONT
 CLOUDFRONT_CREATE_DISTRIBUTION=true
