ECR and Docker pre-deploy

--- a/package.json
+++ b/package.json
@@ -25,40 +25,39 @@
 	"scripts": {
 		"watch": "tsc -w",
 		"test": "vitest",
-		"cdk:deploy": "pnpm run build && pnpm run cdk:update && cdk deploy && pnpm run deploy-post",
-		"cdk:destroy": "pnpm run cdk:update && cdk destroy --force && pnpm run destroy-post",
-		"cdk:update": "npm install -g aws-cdk",
-		"deploy-post": "tsx ./bin/imgproxy-post.ts deploy",
-		"destroy-post": "tsx ./bin/imgproxy-post.ts destroy",
+		"predeploy": "tsx ./bin/imgproxy-pre.ts deploy",
+		"deploy": "pnpm run build && npx aws-cdk deploy",
+		"postdeploy": "tsx ./bin/imgproxy-post.ts deploy",
+		"destroy": "pnpm run update-cdk && npx cdk destroy --force",
+		"postdestroy": "tsx ./bin/imgproxy-post.ts destroy",
+		"update-cdk": "npm install -g aws-cdk",
 		"typecheck": "tsc --noEmit",
 		"build": "pnpm run typecheck && rm -rf ./.dist && pnpm run build:parcel",
-		"build:parcel": "parcel build",
-		"diagram": "cfn-dia html"
+		"build:parcel": "parcel build"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
-		"@parcel/config-default": "^2.13.3",
-		"@parcel/plugin": "^2.13.3",
+		"@parcel/config-default": "^2.14.4",
+		"@parcel/plugin": "^2.14.4",
 		"@pilchard/aws-cloudfront-function": "link:../aws-cloudfront-function",
-		"@types/aws-lambda": "^8.10.147",
+		"@types/aws-lambda": "^8.10.149",
 		"@types/node": "22.13.5",
 		"@types/prompts": "^2.4.9",
 		"ansis": "^3.17.0",
-		"aws-cdk": "2.1001.0",
 		"cloudfront": "link:functions/url-rewrite/__mocks__/cloudfront",
-		"dotenv": "^16.4.7",
+		"dotenv": "^16.5.0",
 		"execa": "^9.5.2",
-		"parcel": "^2.13.3",
+		"parcel": "^2.14.4",
 		"prompts": "^2.4.2",
 		"ts-node": "^10.9.2",
 		"tsx": "^4.19.3",
 		"typescript": "5.8.2",
-		"vite": "^6.2.1",
-		"vitest": "^3.0.8"
+		"vite": "^6.3.2",
+		"vitest": "^3.1.1"
 	},
 	"dependencies": {
+		"aws-cdk": "2.1001.0",
 		"aws-cdk-lib": "2.182.0",
-		"cloudfront": "link:functions/url-rewrite/__mocks__/cloudfront",
 		"constructs": "^10.4.2",
 		"source-map-support": "^0.5.21"
 	},
