--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
 	"scripts": {
 		"watch": "tsc -w",
 		"test": "vitest",
-		"predeploy": "tsx ./bin/imgproxy-pre.ts deploy",
-		"deploy": "pnpm run build && npx aws-cdk deploy",
+		"predeploy": "pnpm run build && tsx ./bin/imgproxy-pre.ts deploy",
+		"deploy": "npx aws-cdk deploy",
 		"postdeploy": "tsx ./bin/imgproxy-post.ts deploy",
 		"destroy": "npx cdk destroy --force",
 		"postdestroy": "tsx ./bin/imgproxy-post.ts destroy",
@@ -59,7 +59,8 @@
 		"aws-cdk": "2.1001.0",
 		"aws-cdk-lib": "2.182.0",
 		"constructs": "^10.4.2",
-		"source-map-support": "^0.5.21"
+		"source-map-support": "^0.5.21",
+		"cloudfront": "link:functions/url-rewrite/__mocks__/cloudfront"
 	},
 	"packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
