--- a/.env.sample
+++ b/.env.sample
@@ -9,10 +9,16 @@ STACK_NAME=
 # IMGPROXY
 ENABLE_URL_SIGNING=true
 
+# ECR - TODO
+ECR_CREATE_REPOSITORY=true
+ECR_REPOSITORY_NAME=imgproxy
+# set to 'git' to use current commit hash as tag
+ECR_IMAGE_TAG=git
+ECR_MAX_IMAGES=5
+ECR_DOCKER_IMAGE_PATH=ghcr.io/imgproxy/imgproxy:latest-arm64
+
 # LAMBDA
 LAMBDA_FUNCTION_NAME=
-LAMBDA_ECR_REPOSITORY_NAME=imgproxy
-LAMBDA_ECR_REPOSITORY_TAG=latest
 LAMBDA_ARCHITECTURE=ARM64
 LAMBDA_MEMORY_SIZE=2048
 LAMBDA_TIMEOUT=60
