--- a/.imgproxy.env.sample
+++ b/.imgproxy.env.sample
@@ -4,7 +4,7 @@
 #   hex-encoded key
 IMGPROXY_KEY=SuperSecretKey
 #   hex-encoded salt
-IMGPROXY_SALT=Lawry_s
+IMGPROXY_SALT=Lawrys
 #   number of bytes to use for signature before encoding to Base64. default: 32
 # IMGPROXY_SIGNATURE_SIZE=32
 #   A list of trusted signatures, comma divided. When set, imgproxy will trust the signatures from the list and won't check them even if IMGPROXY_KEY and IMGPROXY_SALT are set. Default: blank
