consolidate deploy scripts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,9 @@
 		"noUnusedParameters": true,
 		"forceConsistentCasingInFileNames": true,
 		"sourceMap": false
-	}
+	},
+	"exclude": [
+		"node_modules",
+		"**/ref/**"
+	]
 }
