--- a/package.json
+++ b/package.json
@@ -23,15 +23,14 @@
 		"imgproxy": "./bin/imgproxy.js"
 	},
 	"scripts": {
-		"predeploy": "pnpm run build && tsx ./bin/imgproxy-pre.ts deploy",
 		"deploy": "cdk deploy",
-		"postdeploy": "tsx ./bin/imgproxy-post.ts deploy",
+
 		"destroy": "cdk destroy --force",
 		"postdestroy": "tsx ./bin/imgproxy-post.ts destroy",
 		"typecheck": "tsc --noEmit",
 		"build": "pnpm run typecheck && rm -rf ./.dist && pnpm run build:parcel",
 		"build:parcel": "parcel build",
-		"test": "vitest"
+		"test:functions": "vitest"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
