update sample .env defaults

--- a/.imgproxy.env.sample
+++ b/.imgproxy.env.sample
@@ -2,9 +2,9 @@
 #   see: https://docs.imgproxy.net/configuration/options#url-signature
 #
 #   hex-encoded key
-IMGPROXY_KEY=SuperSecretKey
+# IMGPROXY_KEY=SuperSecretKey
 #   hex-encoded salt
-IMGPROXY_SALT=Lawrys
+# IMGPROXY_SALT=Lawrys
 #   number of bytes to use for signature before encoding to Base64. default: 32
 # IMGPROXY_SIGNATURE_SIZE=32
 #   A list of trusted signatures, comma divided. When set, imgproxy will trust the signatures from the list and won't check them even if IMGPROXY_KEY and IMGPROXY_SALT are set. Default: blank
@@ -67,7 +67,7 @@ IMGPROXY_SALT=Lawrys
 #   the maximum resolution of the source image, in megapixels. Images with larger actual size will be rejected. Default: 50
 # IMGPROXY_MAX_SRC_RESOLUTION=50
 #   the maximum size of the source image, in bytes. Images with larger file size will be rejected. When set to 0, file size check is disabled. Default: 0
-IMGPROXY_MAX_SRC_FILE_SIZE=
+# IMGPROXY_MAX_SRC_FILE_SIZE=
 #   the maximum number of animated image frames that may be processed. Default: 1
 # IMGPROXY_MAX_ANIMATION_FRAMES=1
 #   the maximum resolution of the animated source image frame, in megapixels. Images with larger actual frame size will be rejected. When set to 0, imgproxy will test the whole animated image resolution against IMGPROXY_MAX_SRC_RESOLUTION summarising all the frames' resolutions. Default: 0
